# gtk-npapi-vlc

./: .gitignore  Makefile.am  NEWS  configure.ac
activex/: Makefile.am  axvlc.idl  axvlc.tlb  axvlc_idl.c  axvlc_idl.h  axvlc_rc.rc.in  connectioncontainer.cpp  main.cpp  oleobject.cpp  persistpropbag.cpp  persiststreaminit.cpp  plugin.cpp  plugin.h  vlccontrol.cpp  vlccontrol2.cpp  vlccontrol2.h
common/: vlc_player.cpp  vlc_player_options.h  win32_fullscreen.cpp  win32_fullscreen.h  win32_vlcwnd.h
extras/extension/vlcvideo/: chrome.manifest  install.rdf
extras/extension/vlcvideo/components/: vlcvideo.js  vlcvideo.manifest
extras/extension/vlcvideo/content/: browser.xul
extras/macosx/: build-package.sh  build-vlc.sh
npapi/: .gitignore  Makefile.am  common.h  events.cpp  events.h  npvlc_rc.rc.in  vlcplugin.h  vlcplugin_base.cpp  vlcplugin_base.h  vlcplugin_gtk.cpp  vlcplugin_gtk.h  vlcplugin_mac.cpp  vlcplugin_mac.h  vlcplugin_win.cpp  vlcplugin_win.h  vlcplugin_xcb.cpp  vlcplugin_xcb.h  vlcplugin_xlib.cpp  vlcplugin_xlib.h  vlcshell.cpp  vlcshell.h  vlcwindowless_base.cpp  vlcwindowless_base.h  vlcwindowless_win.cpp  vlcwindowless_win.h  vlcwindowless_xcb.cpp  vlcwindowless_xcb.h  xembed.h
npapi/control/: npolibvlc.cpp  npolibvlc.h  nporuntime.cpp  nporuntime.h
npapi/support/: classinfo.h  npmac.cpp  npunix.cpp  npwin.cpp
share/test/: test.html
